--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -395,7 +395,7 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 
 The following sections briefly outline tools and processes giving a synthesised overview. Later sections explore tools use in more depth.
 
-### P1: Explorations and innovations
+### P1: Exploratory stage: Oct 2017 - Dec 2018
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
@@ -473,17 +473,17 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
  -->
 
 
-### P2: The game making using suggested patterns.
+### P2: Accelerated game making programme (5 weeks): Jan - Feb 2019
 
 By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the template that stemmed from participant feedback and my reflections. Key additions at this stage to support the use of a template were a collection of tutorials and code examples illustrating key game features that had been requested by participants. The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials. The resources are explored in more depth in sections three and four below. A more complete description of the resources used in P2 and P3 are included in appendix 4.x.
 
-### P3: Adding a process drama
+### P3: Adding a process drama to the game making programme: April - May 2019
 
 P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens. The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
-### P4: Adapting to MakeCode Arcade and more formal settings
+### P4: Adapting to MakeCode Arcade and more formal settings: Jan 2020 - September 2020
 
-I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter. In 2019 MakeCode Arcade was launched to make games using a shared authoring system to Microbit controller. As that systems was designed to be easy to use by novices I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P2 [^2]. I have included short analysis of the tool and those resources in this book chapter [@chesterman_game_2023].
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter. In 2019 MakeCode Arcade was launched to make games using for novice coders via the use of a block coding approach. In 2020 I ran two iterations of game making course using MakeCode Arcade. The resources and facilitation approach was based that of P2 [^2] [@chesterman_game_2023].
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
