--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -203,9 +203,11 @@ However in its styling it is playful and editorial picks and write up celebrate 
 #### Online graphics editors - Piskel -->
 
 
-### Vignette 4.1 - An example of game making activity in P2
+### Vignette 4.1 - An example of game making activity
 
-The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently on his game design. The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary).
+The following vignette, consisting of extracts of participant activity over twenty minutes of a session, is presented as an summary of different scopes of activity. The participant a child Toby who in this session has been working independently on his game design.
+
+<!-- The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary). -->
 
 #### Table of Vignette
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
@@ -217,9 +219,7 @@ The following sections outline different scopes of activity to ground the reader
 
 <!-- The following sections describe of the vignette above focusing on the overall activity and its place within evolution of learning design.
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis. -->
-
 <!-- ALTERNATIVE SIMPLIER INTRO TO THIS SECTION -->
-
 
 <!-- Each section follows a pattern: the activity is described in general, then examples of activity at that scope from the vignette above are described, ending with brief analysis or signposting to where the activity in explored in greater depth. -->
 
@@ -305,11 +305,7 @@ By this stage, the process of collecting a user generated list of features and t
 
 <!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
 
-
-Overall activity at this level was driven by learners setting goals and requesting help to implement game features. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game.
-<!-- A summary table with short descriptions and links to the resources used are included as an appendix 4.x.   -->
-
-    "Mick: So we’ve got two ones. Here’s the tutorial and there’s the examples of code so you can compare what you are doing and see where the new code should be placed."
+Overall activity at this level was driven by learners setting goals and requesting help to implement game features. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". A later section of this chapter details the different supporting documentation as an example of an artefact that guides participation in game making practices. Chapter five then explore activity occurring at this scope in more detail with a greater focus on emerging concepts as tools.
 
 In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as others in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. In contrast, others participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
 
@@ -337,9 +333,7 @@ In the course of the vignette above, Toby chose to access only a code example of
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
-While the previous section focused on a mid-level scope of implementing game features, more complicated patterns involved several stages and varied tools to implement. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby undertakes certain chains of processes in a fluid way that shows that actions had become operations. For example, his quick navigation between different areas of the game code, the game preview window and  sources of documentation.
-
-In contrast, some tasks are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example which matches the game template he is working on.
+While the previous section focused on a mid-level scope of implementing game features, more complicated patterns involved several stages and varied tools to implement. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby undertakes certain chains of processes in a fluid way that shows that actions had become operations. For example, his quick navigation between different areas of the game code, the game preview window and  sources of documentation. In contrast, some tasks are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example which matches the game template he is working on.
 
 <!--NOTE As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers. -->
 
@@ -393,7 +387,6 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 | P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
  -->
 
-The following sections briefly outline tools and processes giving a synthesised overview. Later sections explore tools use in more depth.
 
 ### P1: Exploratory stage: Oct 2017 - Dec 2018
 
