--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -480,7 +480,7 @@ I also adapted and advanced resources with an aim that they could be used within
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
-This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns DBR in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. The first two tensions address issues of identity, ambition, and attempts to align with curricular concepts. The remaining sections detail a responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation.
+This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns design-based / formative research in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. The first two tensions address issues of identity, ambition, and attempts to align with curricular concepts. The remaining sections detail responses to key contradictions in the tool set of the early design which stimulate the development of authoring tools and supporting documentation.
 
 
 <!-- In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways. -->
@@ -505,26 +505,25 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 ## 1. Facilitator conflict addressing tensions between privileging participant choices or underlying computing concepts
 
-In this section I outline key tensions in the design that two interventions involving different forms of mapping have the potential to address in more formal teaching environments.
+While the focus on this research is informal environment, I wanted to create resources and processes which are of potential value to practitioners in the UK classroom. Chapter two explored ways in which digital game making is commonly aligned with curricular areas [@kafai_connected_2016]. It also surfaced tensions that emerge between the exploration of curricular concepts participants desire to follow activities following learner expression and choice [@hoyles_pedagogy_1992].
 
-While the focus on this research is informal environment, I wanted to create resources and processes which are of potential value to practitioners in the UK classroom. The LR briefly explored ways in which digital game making is commonly aligned with curricular areas [@kafai_connected_2016]. For me the challenge was to find a way to support participants to explore these concepts without detracting from the choice oriented learning design.  
+This section addresses my interventions to resolve this tension. From my own perspective as a research designer/facilitator, there are two dimensions of contradiction which are explored in the following section: one my perception of the contradiction between curriculum and learner choice; the second a conflict which manifested via my hesitancy to introduce tools and activities designed to address this tension.
 
-Analysis of my journal notes shows that I spent significant time exploring how best to support participant awareness of underlying computational and systems thinking concepts without detracting from their valuable experiential progress. This section addresses my interventions to resolve the tension, previous explored in the literature review, between learner expression and choice and the curricular contents  [@hoyles_pedagogy_1992].
+Analysis of my journal notes shows that I spent significant time exploring how best to support participant awareness of underlying computational and systems thinking concepts without detracting from their valuable experiential progress.
 
-The conflict in this example is from my own perspective. There are two sides of contradiction, one is my perception of the contradiction between curriculum and choice. Later, another conflict which manifested as my hesitancy introducing activities using the new tools is also explored.
 
 <!-- This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom. -->
 
 <!-- stylised in a way that mirrored a map used for navigation in a quest-themed computer game.
 
-As learners traced a trail between the different island/missions they had visited, the map provoked learners to reflect on their journey and progress. However, this approach may be too labour and time intensive for many class environments.
+As learners traced a trail between the different island/missions they had visited, the map prov new tools is also exploredoked learners to reflect on their journey and progress. However, this approach may be too labour and time intensive for many class environments.
 -->
 
 #### Learning Dimensions Map
 
-In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity.
-
 When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
+
+<!-- In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity. -->
 
 Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects. Has traction for NCCE quick read. The value of facilitators mapping out concept which are likely to occur in project work can help with x, y and z.
 
@@ -545,14 +544,13 @@ One of the outcomes of my research was to extract some of the concepts and pract
 | Input Event |   | Reusing and Remixing      |
 
 
+This table is supplemented with concise descriptions of the concepts [^5], and cross referenced with examples of the concepts in practice in common game features[^6]. 
+
 This process of mapping this framework is potentially of use for teachers and other researchers to help their observation of students in game making activities to align with design, coding and computational concepts.
 
+An example: In journal notes I note my attempts to find learning relating to abstract concepts happening in-situ. A common example of use of loops or arrays or functions. I would highlight their use by participants and link to their activity. This mirrors the concept of the value of abstract in context for wider application is underlined in the work Davydov of rising to the concrete [@valsiner_cultural-historical_2007].
 
-
-
-
-
-#### Observations on tensions which the learning and navigational maps have potential to address.
+#### The potential of learning and navigational maps
 
 NOTE - more work to link this succinctly to literature is needed.
 
@@ -567,16 +565,33 @@ Offering student choice creates stressful demands on a teacher trying to support
 
 Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities. To address this I identified and highlighted systems related design patterns themed as challenge-related patterns to explore systems concepts within the game context. This approach mirrors work undertaken by Gary on Game Star Mechanic , where
 
-(outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)
+<!-- (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements) -->
 
-
-**Link Section**
+#### Inactivity illuminating the play paradox
 
 In work exploring my emergent findings, I explored the concept of semantic waves as a way of picturing the alternating between concrete design experience and implementing specific code structures, and communicating / exploring the underlying abstract concepts.  
 
 However, while the process of adapting this learning design to the needs of more formal settings can be aligned to existing research on this area. (on semantic maps, on abstract concepts), I was reluctant to introduce these resources in this setting. Instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
 
 In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts. Thus, while this aspect and merits further exploration to potential help classroom practice, this is be beyond the scope of this thesis.
+
+
+My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment.
+
+<!-- has been is helpful to provide a clearer the focus of this study on the possibilities of informal spaces. - >
+<!-- I also de-prioritised learning maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, -->
+<!-- and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods) -->
+
+This reflection was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned. The 'play paradox' explored above, which can create tensions around project work was lessened by the home education context.
+
+Despite this, the niggling feeling, it looks like fun but are they learning, remained. This feeling fed my concerns surrounding the validity of the experience and driving alignment to abstract content, stemmed from wider concerns around avoiding danger of tacit learning by reinforcing learning and spur metacognition. In retrospect, analysis of the wider learning experience shows that such opportunities did exist via social processes. This theme is explored in more detail in chapter six.
+
+IS THIS NEEDED / IN THE RIGHT PLACE?
+The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates.
+
+
+
+
 
 <!-- The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners. -->
 
@@ -1224,20 +1239,6 @@ Affordances within the domain of HCI research -->
 
 The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
 
-#### Inactivity illuminating the play paradox
-
-My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment.
-
-<!-- has been is helpful to provide a clearer the focus of this study on the possibilities of informal spaces. - >
-<!-- I also de-prioritised learning maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, -->
-<!-- and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods) -->
-
-This reflection was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned. The 'play paradox' explored above, which can create tensions around project work was lessened by the home education context.
-
-Despite this, the niggling feeling, it looks like fun but are they learning, remained. This feeling fed my concerns surrounding the validity of the experience and driving alignment to abstract content, stemmed from wider concerns around avoiding danger of tacit learning by reinforcing learning and spur metacognition. In retrospect, analysis of the wider learning experience shows that such opportunities did exist via social processes. This theme is explored in more detail in chapter six.
-
-IS THIS NEEDED / IN THE RIGHT PLACE?
-The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates.
 
 
 ### Discussion on authenticity and agency concerning tools and resources  
@@ -1434,6 +1435,8 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/
 [^3]: https://glitch-game-makers-manual.glitch.me/
 [^4]: map of GDP
+[^5]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
+[^6]: https://mickfuzz.github.io/makecode-platformer-101/addHazard
 [^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
 [^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
